# 42_Project

./: .gitignore  SKILL.md  skills-lock.json
ft_linux/: .gitignore  CLAUDE.md  Makefile  README.md  run-all.sh  skills-lock.json
ft_linux/.specs/: 00-overview.md  README.md  bonus.md  general-instructions.md  goals.md  mandatory.md  packages.md  resources.md  rules.md  submission-evaluation.md
ft_linux/bonus/: 00-blfs-env.sh  KERNEL-REQUIREMENTS.md  run-bonus.sh  xinitrc.skel
ft_linux/docs/: 01-vm-setup.md  02-build-walkthrough.md  03-systemd-deviation.md  04-troubleshooting.md  05-evaluation-checklist.md  06-package-manifest.md  RUNBOOK.md  SUBMISSION.md
ft_linux/env/: lfs.env  paths.sh  versions.sh
ft_linux/lib/: chroot-helpers.sh  common.sh  package.sh  state.sh
ft_linux/scripts/: 00-partition-disk.sh  01-format-mount.sh  (+1 more)
kfs1/: .gitignore  CONTRACTS.md  Cargo.toml  Dockerfile  Makefile  README.md  i386-kfs.json  linker.ld  rust-toolchain.toml
kfs1/.cargo/: config.toml
kfs1/.specs/: 00-overview.md  README.md  bonus.md  general-instructions.md  goals.md  mandatory.md  resources.md  rules.md  submission-evaluation.md
kfs1/.specs/raw/: subject.md
kfs1/doc/: README.md
kfs1/doc/01-vue-densemble/: README.md
kfs1/doc/02-environnement-build/: README.md
kfs1/doc/03-cible-rust-baremetal/: README.md
kfs1/doc/04-grub-multiboot/: README.md
kfs1/doc/05-boot-asm/: README.md
kfs1/doc/06-linker-script/: README.md
kfs1/doc/07-coeur-rust/: README.md
kfs1/doc/08-compilation-link/: README.md
kfs1/doc/09-ecran-vga/: README.md
kfs1/doc/10-bibliotheque-libk/: README.md
kfs1/doc/11-bonus-console-printf/: README.md
kfs1/doc/12-bonus-clavier-ecrans/: README.md
kfs1/grub/: grub.cfg
kfs1/scripts/: build.sh  mkiso.sh  screenshot.sh
kfs1/src/: boot.s  console.rs  keyboard.rs  lib.rs  screens.rs  vga.rs
kfs1/src/libk/: mod.rs  string.rs  types.rs
learn2slither/: .gitignore  DEFENSE.md  README.md  pyproject.toml  requirements-dqn.txt  requirements.txt  setup.cfg  skills-lock.json  snake  trouble.md
learn2slither/.specs/: bonus.md  constraints.md  evaluation.md  mandatory-requirements.md  overview.md
learn2slither/doc/: 01-vue-ensemble-rl.md  02-etat-vision.md  03-recompenses.md  04-q-learning-tabulaire.md  05-exploration-exploitation.md  06-reseau-neurones.md  07-architecture-code.md  08-entrainement-evaluation-bonus.md  OUTLINE.md  README.md
learn2slither/models/: 1000sess.txt  10sess.txt  1sess.txt  5000sess.txt  dqn_1000sess.txt  dqn_100sess.txt  dqn_5000sess.txt  nn_1000sess.txt  nn_100sess.txt  nn_5000sess.txt  test.txt
learn2slither/src/learn2slither/: __init__.py  agent.py  cli.py  config.py  contracts.py  dqn_agent.py  environment.py  game.py  interpreter.py  menu.py  nn_agent.py  visualizer.py
learn2slither/tests/: conftest.py  test_agent.py  test_bonus.py  test_cli.py  test_dqn_agent.py  test_environment.py  test_interpreter.py  test_menu.py
(+169 files in other folders)
