[project]
name = "learn2slither"
version = "1.0.0"
description = "A reinforcement-learning snake (42 project)."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pygame>=2.1",
]

[project.optional-dependencies]
# Bonus DQN agent only (heavy, optional). Install with: uv sync --extra dqn
dqn = ["torch>=2.0"]

[project.scripts]
# Lets `uv run snake ...` work; the ./snake script keeps working too.
snake = "learn2slither.cli:main"

[dependency-groups]
# Dev tooling (tests + lint), installed by default by `uv sync`.
dev = [
    "pytest>=7.0",
    "flake8>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/learn2slither"]
